--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "gulp-compass": "^2.0.3",
     "gulp-concat": "^2.4.2",
     "gulp-connect": "^2.2.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-jsonminify": "0.0.2",
+    "gulp-minify-html": "^0.1.7",
+    "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
