--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-minify-html": "^0.1.7",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
+    "imagemin-pngcrush": "^4.0.0",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
   }
