--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Shane O'Grady",
   "license": "ISC",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-browserify": "^0.5.0",
     "gulp-coffee": "^2.2.0",
@@ -23,10 +24,13 @@
     "gulp-imagemin": "^2.0.0",
     "gulp-jsonminify": "0.0.2",
     "gulp-minify-html": "^0.1.7",
+    "gulp-notify": "^2.1.0",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "imagemin-pngcrush": "^4.0.0",
     "jquery": "^2.1.1",
     "mustache": "^0.8.2"
+  },
+  "dependencies": {
   }
 }
